<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pddl_parser</name>
  <version>0.9.0</version>
  <description>A pddl_parser based on boost spirit</description>

  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>

  <license>GPLv2+ license</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>spdlog</depend>
  <depend>pkg-config</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
